--- a/files/templates/base.html
+++ b/files/templates/base.html
@@ -1,92 +1,135 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet"
+          integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
     <meta charset="UTF-8">
     <title>{% block title %} {% endblock %}</title>
 </head>
 <body>
-           {% if request.user.is_authenticated %}
+{% if request.user.is_authenticated %}
 
 <div class="container d-flex flex-column flex-md-row align-items-center pb-3 mb-4 border-bottom">
-      <a href="/" class="d-flex align-items-center link-body-emphasis text-decoration-none">
+    <a href="/" class="d-flex align-items-center link-body-emphasis text-decoration-none">
         <span class="fs-4">REDS</span>
-      </a>
+    </a>
 
-      <nav class="d-inline-flex mt-2 mt-md-0 ms-md-auto">
+    <nav class="d-inline-flex mt-2 mt-md-0 ms-md-auto">
 
         <a class="me-3 py-2 link-body-emphasis text-decoration-none" href="{% url 'files:calculator' %}">Калькулятор</a>
-        <a class="me-3 py-2 link-body-emphasis text-decoration-none" href="{% url 'files:create_files' %}">Загрузить файл</a>
-        <a class="me-3 py-2 link-body-emphasis text-decoration-none" href="{% url 'files:upload_arh' %}">Загрузить архив</a>
-                  <a class="me-3 py-2 link-body-emphasis text-decoration-none" href="{% url 'files:price' %}">Прайс-лист</a>
+        <a class="me-3 py-2 link-body-emphasis text-decoration-none" href="{% url 'files:create_files' %}">Загрузить
+            файл</a>
+        <a class="me-3 py-2 link-body-emphasis text-decoration-none" href="{% url 'files:upload_arh' %}">Загрузить
+            архив</a>
+        <a class="me-3 py-2 link-body-emphasis text-decoration-none" href="{% url 'files:price' %}">Прайс-лист</a>
 
-        <a class="me-3 py-2 link-body-emphasis text-decoration-none"  href="{% url 'files:all_files' %}">Все файлы</a>
-        <a class="me-3 py-2 link-body-emphasis text-decoration-none"  href="{% url 'files:myfiles' %}">Мои файлы</a>
-      </nav>
-    </div>
+        <a class="me-3 py-2 link-body-emphasis text-decoration-none" href="{% url 'files:all_files' %}">Все файлы</a>
+        <a class="me-3 py-2 link-body-emphasis text-decoration-none" href="{% url 'files:myfiles' %}">Мои файлы</a>
+    </nav>
+</div>
 <div class="container">
- {% endif %}
+    {% endif %}
 
- {% if request.user.is_authenticated %}
- Hello {{ request.user.first_name|default:request.user.username }} Role: {{user.role}},
- <a href="{% url 'logout' %}">Logout</a>
- {% else %}
- <a href="{% url 'login' %}">Log-in</a>
- {% endif %}
+    {% if request.user.is_authenticated %}
+    Hello {{ request.user.first_name|default:request.user.username }} Role: {{user.role}},
+    <a href="{% url 'logout' %}">Logout</a>
+    {% else %}
+    <a href="{% url 'login' %}">Log-in</a>
+    {% endif %}
 
-{% block body %}
+    {% block body %}
 
 
     {% endblock %}
+    {% if page_obj.has_other_pages %}
+    <nav aria-label="...">
+        <ul class="pagination">
+            {% if page_obj.has_previous %}
+            <li class="page-item">
+                <a class="page-link" href="?page={{page_obj.previous_page_number}}">Предыдущая</a>
+            </li>
+            {% endif %}
+            {% for p in page_obj.paginator.page_range %}
+            {% if page_obj.number == p %}
+            <li class="page-item active" aria-current="page"><a class="page-link" href="{{ p }}">{{ p }}</a></li>
+            {% elif p >= page_obj.number|add:-2 and p <= page_obj.number|add:2 %}
+            <li class="page-item"><a class="page-link" href="?page={{ p }}"> {{ p }}</a></li>
+            {% endif %}
+            {% endfor %}
+            {% if page_obj.has_next %}
+            <li class="page-item active" aria-current="page">
+                <a class="page-link" href="?page={{page_obj.next_page_number}}">Следующая</a>
+            </li>
+            {% endif %}
+
+        </ul>
+    </nav>
+    {% endif %}
+
 </div>
 
- {% if request.user.is_authenticated %}
+{% if request.user.is_authenticated %}
 
 <footer class="container pt-4 my-md-5 pt-md-5 border-top">
     <div class="row">
-      <div class="col-12 col-md">
-        <small class="d-block mb-3 text-body-secondary">© 2012–2023</small>
-      </div>
-      <div class="col-6 col-md">
-        <h5>Профиль</h5>
-        <ul class="list-unstyled text-small">
-          <li class="mb-1"><a class="link-secondary text-decoration-none" href="{% url 'account:edit_profile' %}">Изменить профиль</a></li>
-          <li class="mb-1"><a class="link-secondary text-decoration-none" href="{% url 'password_change' %}">Сменить пароль</a></li>
-          <li class="mb-1"><a class="link-secondary text-decoration-none" href="{% url 'password_reset' %}">Сбросить пароль</a></li>
-          <li class="mb-1"><a class="link-secondary text-decoration-none" href="#">Персонал для разработчиков</a></li>
-          <li class="mb-1"><a class="link-secondary text-decoration-none" href="#">Другой</a></li>
-        </ul>
-      </div>
-      <div class="col-6 col-md">
-        <h5>Заказы</h5>
-        <ul class="list-unstyled text-small">
-            <li class="mb-1"><a class="link-secondary text-decoration-none" href="{% url 'orders:new_order' %}">Новый заказ</a></li>
-            <li class="mb-1"><a class="link-secondary text-decoration-none" href="{% url 'orders:view_orders'%}">Мои заказы</a></li>
-          <li class="mb-1"><a class="link-secondary text-decoration-none" href="/orders/createitem/">Добавить в заказ</a></li>
-          <li class="mb-1"><a class="link-secondary text-decoration-none" href="{% url 'orders:view_all_orders' %}">Посмотреть все заказы</a></li>
-          <li class="mb-1"><a class="link-secondary text-decoration-none" href="{% url 'orders:view_all_orders_pay' %}">Посмотреть все оплаченые заказы</a></li>
-          <li class="mb-1"><a class="link-secondary text-decoration-none" href="{% url 'orders:view_all_files_for_work_in_orders' %}">Посмотреть все файлы для печати</a></li>
-          <li class="mb-1"><a class="link-secondary text-decoration-none" href="{% url 'orders:report_complite_orders' %}">Отчет по выполненым заказам</a></li>
-        </ul>
-      </div>
-      <div class="col-6 col-md">
-        <h5>Организации</h5>
-        <ul class="list-unstyled text-small">
-          <li class="mb-1"><a class="link-secondary text-decoration-none" href="{% url 'account:list_organisation' %}">Мои организации</a></li>
-          <li class="mb-1"><a class="link-secondary text-decoration-none" href="#">Добавить организацию</a></li>
-          <li class="mb-1"><a class="link-secondary text-decoration-none" href="#">Условия</a></li>
-        </ul>
-      </div>
+        <div class="col-12 col-md">
+            <small class="d-block mb-3 text-body-secondary">© 2012–2023</small>
+        </div>
         <div class="col-6 col-md">
-        <h5>Доставка</h5>
-        <ul class="list-unstyled text-small">
-          <li class="mb-1"><a class="link-secondary text-decoration-none" href="#">Выбор доставки</a></li>
-          <li class="mb-1"><a class="link-secondary text-decoration-none" href="#">Условия</a></li>
-        </ul>
-      </div>
+            <h5>Профиль</h5>
+            <ul class="list-unstyled text-small">
+                <li class="mb-1"><a class="link-secondary text-decoration-none" href="{% url 'account:edit_profile' %}">Изменить
+                    профиль</a></li>
+                <li class="mb-1"><a class="link-secondary text-decoration-none" href="{% url 'password_change' %}">Сменить
+                    пароль</a></li>
+                <li class="mb-1"><a class="link-secondary text-decoration-none" href="{% url 'password_reset' %}">Сбросить
+                    пароль</a></li>
+                <li class="mb-1"><a class="link-secondary text-decoration-none" href="#">Персонал для разработчиков</a>
+                </li>
+                <li class="mb-1"><a class="link-secondary text-decoration-none" href="#">Другой</a></li>
+            </ul>
+        </div>
+        <div class="col-6 col-md">
+            <h5>Заказы</h5>
+            <ul class="list-unstyled text-small">
+                <li class="mb-1"><a class="link-secondary text-decoration-none" href="{% url 'orders:new_order' %}">Новый
+                    заказ</a></li>
+                <li class="mb-1"><a class="link-secondary text-decoration-none" href="{% url 'orders:view_orders'%}">Мои
+                    заказы</a></li>
+                <li class="mb-1"><a class="link-secondary text-decoration-none" href="/orders/createitem/">Добавить в
+                    заказ</a></li>
+                <li class="mb-1"><a class="link-secondary text-decoration-none"
+                                    href="{% url 'orders:view_all_orders' %}">Посмотреть все заказы</a></li>
+                <li class="mb-1"><a class="link-secondary text-decoration-none"
+                                    href="{% url 'orders:view_all_orders_pay' %}">Посмотреть все оплаченые заказы</a>
+                </li>
+                <li class="mb-1"><a class="link-secondary text-decoration-none"
+                                    href="{% url 'orders:view_all_files_for_work_in_orders' %}">Посмотреть все файлы для
+                    печати</a></li>
+                <li class="mb-1"><a class="link-secondary text-decoration-none"
+                                    href="{% url 'orders:report_complite_orders' %}">Отчет по выполненым заказам</a>
+                </li>
+            </ul>
+        </div>
+        <div class="col-6 col-md">
+            <h5>Организации</h5>
+            <ul class="list-unstyled text-small">
+                <li class="mb-1"><a class="link-secondary text-decoration-none"
+                                    href="{% url 'account:list_organisation' %}">Мои организации</a></li>
+                <li class="mb-1"><a class="link-secondary text-decoration-none" href="#">Добавить организацию</a></li>
+                <li class="mb-1"><a class="link-secondary text-decoration-none" href="#">Условия</a></li>
+            </ul>
+        </div>
+        <div class="col-6 col-md">
+            <h5>Доставка</h5>
+            <ul class="list-unstyled text-small">
+                <li class="mb-1"><a class="link-secondary text-decoration-none" href="#">Выбор доставки</a></li>
+                <li class="mb-1"><a class="link-secondary text-decoration-none" href="#">Условия</a></li>
+            </ul>
+        </div>
     </div>
-  </footer>
- {% endif %}
+</footer>
+{% endif %}
 
 </body>
 </html>
