--- a/orders/templates/orderpay.html
+++ b/orders/templates/orderpay.html
@@ -22,7 +22,8 @@
                 <td>{{ Orders.paid }}</td>
                 <td>{{ Orders.total_price }} руб.</td>
                 <td>{{ Orders.status }}</td>
-                <td><a href="/orders/order_pay/{{order.id}}">Скачать счет</a></td>
+                <td><a href="/media/{{Orders.order_pdf_file}}">Скачать счет</a></td>
+
                 <td>
                     <button type="submit" class="btn btn-primary"
                             onClick="location.href='#'">Потвердить оплату
