--- a/files/templates/files/rollup_print.html
+++ b/files/templates/files/rollup_print.html
@@ -16,13 +16,22 @@
     У файла не должно быть альфаканалов, путей, несведенных слоев.</p>
 
 <div class="containers">
-    <form action="{% url 'files:create_large' %}" method="post", enctype="multipart/form-data">
+    <form action="{% url 'files:create_rollup' %}" method="post", enctype="multipart/form-data">
 
         {% csrf_token %}
-        {{ form|crispy }}
+<!--        {{ form|crispy }}-->
+
+        <p>{{form.material}}</p>
+       <p> {{form.quantity}}</p>
+       <p> {{form.FinishWork}}</p>
+       <p> {{form.images}}</p>
         <button type="submit" class="btn btn-primary">Загрузить</button>
 
     </form>
 </div>
+
+
+
+
 {% endblock %}
 
