--- a/orders/templates/orderpay.html
+++ b/orders/templates/orderpay.html
@@ -3,6 +3,7 @@
 {% block body %}
 <h3> Страница оплаты</h3>
 <h5> Способы оплаты</h5>
+<a class="link-secondary text-decoration-none" href="https://auth.robokassa.ru/Merchant/Index.aspx?MerchantLogin=san-cd&InvId=0&Culture=ru&Encoding=utf-8&Description=the_orders&OutSum=10000&shp_interface=link&SignatureValue=46a6f281b2cca58885e0614a5308f7b2">Оплатить</a>
 <h6>{{text}}</h6>
 <div class="row">
     <div class="col-md-12">
@@ -23,10 +24,11 @@
                 <td>{{ Orders.total_price }} руб.</td>
                 <td>{{ Orders.status }}</td>
                 <td><a href="/media/{{Orders.order_pdf_file}}">Скачать счет</a></td>
+                <td><a href="{{link_pay}}">оплата</a></td>
 
                 <td>
                     <button type="submit" class="btn btn-primary"
-                            onClick="location.href='#'">Потвердить оплату
+                            onClick="location.href='{{link_pay}}'">Оплата картой
                     </button>
                 </td>
             </tr>
