--- a/orders/templates/orderpay.html
+++ b/orders/templates/orderpay.html
@@ -2,9 +2,6 @@
 <title>{% block title %} Страница оплаты{% endblock %}</title>
 {% block body %}
 <h3> Страница оплаты</h3>
-<h5> Способы оплаты</h5>
-<a class="link-secondary text-decoration-none" href="https://auth.robokassa.ru/Merchant/Index.aspx?MerchantLogin=san-cd&InvId=0&Culture=ru&Encoding=utf-8&Description=the_orders&OutSum=10000&shp_interface=link&SignatureValue=46a6f281b2cca58885e0614a5308f7b2">Оплатить</a>
-<h6>{{text}}</h6>
 <div class="row">
     <div class="col-md-12">
         <table class="table table-striped table-hover">
@@ -24,11 +21,10 @@
                 <td>{{ Orders.total_price }} руб.</td>
                 <td>{{ Orders.status }}</td>
                 <td><a href="/media/{{Orders.order_pdf_file}}">Скачать счет</a></td>
-                <td><a href="{{link_pay}}">оплата</a></td>
 
                 <td>
                     <button type="submit" class="btn btn-primary"
-                            onClick="location.href='{{link_pay}}'">Оплата картой
+                            onClick="location.href='{{link_pay}}'">Оплатить
                     </button>
                 </td>
             </tr>
