--- a/orders/templates/add_files_in_order.html
+++ b/orders/templates/add_files_in_order.html
@@ -110,7 +110,7 @@
 
                 <td></td>
                 {% else %}
-                <td><a href="/orders/del_item_in_order/{{order_id}}/{{item.id}}">Удалить</a></td>
+                <td><a href="/orders/del_item_in_order/{{order_id}}/{{items.id}}">Удалить</a></td>
 
                 {% endif %}
             </tr>
